landing page with blog links querry

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .hover_Card_before:hover{
+        z-index:100;
+        background-color:white;
+        box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+    }
+}
