--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,4 +10,9 @@
         background-color:white;
         box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
     }
+    .containerAction:hover .translateZUpdate {
+        transform: translateY(-50px);
+        background-color: rgb(255 255 255 / 38%);
+        backdrop-filter:  blur(5px);
+    }
 }
