--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,5 +14,7 @@
         transform: translateY(-50px);
         background-color: rgb(255 255 255 / 38%);
         backdrop-filter:  blur(5px);
+        color: #111827;
+        font-weight:900
     }
 }
