--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,21 +3,20 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
-    .hover_Card_before:hover{
-        z-index:100;
-        background-color:white;
-        box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
-    }
-    .containerAction:hover .translateZUpdate {
-        transform: translateY(-50px);
-        background-color: rgb(255 255 255 / 38%);
-        backdrop-filter:  blur(5px);
-        color: #111827;
-        font-weight:900
-    }
-    .bg_custom-dark{
-        background-color: #E3B8A7;
-    }
+  .hover_Card_before:hover {
+    z-index: 100;
+    background-color: white;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+  }
+  .containerAction:hover .translateZUpdate {
+    transform: translateY(-50px);
+    background-color: rgb(255 255 255 / 38%);
+    backdrop-filter: blur(5px);
+    color: #111827;
+    font-weight: 900;
+  }
+  .bg_custom-dark {
+    background-color: #e3b8a7;
+  }
 }
